# cs1230-final-project-elevator

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.c7bed5b  CMakeLists.txt.user.d5b1bb8  README.md  build.ninja  cmake_install.cmake  lsystem.cpp  lsystem.h  projects_realtime  submission-realtime.md
.cmake/api/v1/reply/: cmakeFiles-v1-13660bb6984abd20f0f5.json  codemodel-v2-f48e21bca01578a5b33c.json  index-2025-12-08T07-38-02-0700.json  target-StaticGLEW-Debug-c9c0cbc2942fd360dac6.json  target-projects_realtime-Debug-688809cc0e8f13088911.json
.cmake/api/v1/reply.prev/: cache-v2-6b13ea449d95f0295ad8.json  codemodel-v2-1225bece49c1981c5ed8.json  index-2025-12-08T07-37-48-0231.json  target-StaticGLEW-Debug-08b3753afe73467b646f.json  target-projects_realtime-Debug-916f93f2b3f7ca311980.json  target-projects_realtime_other_files-Debug-370a90633be8fd093946.json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qt/rcc/: Resources.qrc  qrc_Resources.cpp
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: Cone.cpp.B09782B2DCA6B6CE.idx  Cone.h.AF335E93B56EE13A.idx  Cube.cpp.75B3D11E8A5C6B23.idx  Cube.h.EE532139CD844917.idx  Cylinder.cpp.F6D78959F893B32B.idx  Primitive.h.8B502B718D52D105.idx  QApplication.B98B6862777268F9.idx  QAudioDevice.6977800C431A4FF1.idx  QAudioSource.0A6404D841FBBA42.idx  QBoxLayout.C1023DFDBF486B59.idx  QCheckBox.E3B231BAF0BAC9C5.idx  QCommandLineParser.7E3C1E9CFADBBA11.idx  QCoreApplication.DA0212ACDBC38138.idx  QElapsedTimer.95584E0C1A1BD731.idx  QFile.F6824C64C610AEEF.idx  QGroupBox.DE935C52DFE41836.idx  QJsonObject.B4756D2E1EE1ABF8.idx  QLabel.1852383177EC3E1F.idx  QMainWindow.F861FAE2EAE5CF9B.idx  QMediaDevices.854CC0CB4013FF28.idx  QObject.C6CFFEFFFBDDF25C.idx  QOpenGLWidget.AA08D2FB888511CA.idx  QScreen.AC477497DDF79CBF.idx  QSizeF.B7943571E5564FCC.idx  QSlider.9460393EC6C70200.idx  QSurfaceFormat.ADF9E269CAA17676.idx  QTransform.1E5E8D7C73F234A3.idx  Sphere.cpp.D85854E346A092AE.idx  __hash_table.17F7E0D45E5BB0A1.idx  __node_handle.4C415B9596ACF30C.idx  __split_buffer.C221A8F5E465EE3D.idx  _fixes.hpp.899F9789E41CD573.idx  _symbol_aliasing.h.E288BCB552ABD637.idx  adjacent_find.h.F9C3F2A93B6967F2.idx  advance.h.F46E9AB92B8266FB.idx  allocation_guard.h.F3B00615B3A680DE.idx  audiocapture.cpp.6DE56CFBB7260BB3.idx  audiocapture.h.D3FF298EB386D359.idx  binary_search.h.A0C6BEDA0BEA653D.idx  bind.h.002A182B48CB00B1.idx  (+325 more)
StaticGLEW_autogen/: deps  moc_predefs.h
Vivian/: CMakeCache.txt  CMakeCache.txt.prev  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  projects_realtime  submission.md
Vivian/StaticGLEW_autogen/: deps
Vivian/glm/: cmake_install.cmake
Vivian/projects_realtime_autogen/: deps
Vivian/resources/shaders/: background.frag  background.vert  default.frag  default.vert  final.frag  final.vert  texture.frag  texture.vert
Vivian/scenefiles/bump-mapping/orange/: orange.json
Vivian/src/: camera.cpp  camera.h  mainwindow.cpp  mainwindow.h  realtime.cpp  realtime.h  settings.h
Vivian/src/utils/: phys.cpp  phys.h  sceneparser.cpp  sceneparser.h
Vivian/src/utils/shapes/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Sphere.cpp  Sphere.h  Triangle.cpp
Vivian/student_outputs/bump-mapping/: orange_bump-slider.mov
glm/: cmake_install.cmake
projects_realtime_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
projects_realtime_autogen/OWQMYEJWPR/: moc_aspectratiowidget.cpp  moc_aspectratiowidget.cpp.d
projects_realtime_autogen/UVLADIE3JM/: moc_audiocapture.cpp  moc_audiocapture.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
resources/70 CGC LUTs/: False Color LUT.cube
resources/shaders/: color-grading.frag  color-grading.vert  default.frag  default.vert  dof.frag  dof.vert  final.frag  light.frag  light.vert  particle.frag  particle.vert  texture.frag
scenefiles/: ethan.json  marissa.json  vivian.json  yohta.json
scenefiles/Proj6/: campath_curve.json  campath_loop.json  campath_orientation.json  campath_single.json  campath_speed.json  default.json  lsystem_weird.json  particle_scale.json  particle_stress.json  particle_velocity.json
scenefiles/Yohta/: campath_loop.json  campath_speed.json  campath_stay.json  default.json  lsystem_angle.json  lsystem_axiom.json  lsystem_forest.json  lsystem_iter.json  lsystem_rule.json  particle_audio.json  particle_calm.json  particle_edge.json  particle_lifetime.json  particle_multi.json  particle_scale.json  particle_stress.json  particle_velocity.json  test_lsystem_debug.json
scenefiles/lights-camera/extra_credit/: alienwithsword.json
scenefiles/realtime/extra_credit/: snowglobe.json
scenefiles/realtime/optional/: snow.json
src/: audiocapture.cpp  audiocapture.h  camera.cpp  camera.h  camerapath.cpp  camerapath.h  cone.cpp  cone.h  cube.cpp  cylinder.cpp  cylinder.h  dof.cpp  dof.h  inputs.cpp  inputs.h  lsystem.cpp  lsystem.h  main.cpp  mainwindow.cpp  mainwindow.h  particlesystem.cpp  particlesystem.h  realtime.cpp  realtime.h  realtimehelper.cpp  realtimehelper.h  settings.h  shapes.cpp  shapes.h  sphere.cpp  triangle.cpp
src/camera/: camera.cpp  camera.h
src/shapes/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Primitive.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/utils/: Cone.cpp  Cone.h  Cube.cpp  Cylinder.cpp  Cylinder.h  Sphere.cpp  Tet.cpp  Triangle.cpp  cone.cpp  cone.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  deug.h  inputs.cpp  inputs.h  realtimehelper.cpp  realtimehelper.h  rigidbody.cpp  scene.cpp  scene.h  scenedata.h  scenefilereader.cpp  scenefilereader.h  sceneparser.cpp  sceneparser.h  shaderloader.h  shapes.cpp  shapes.h  sphere.cpp  sphere.h  spring.cpp  spring.h
